<resources>
    <string name="app_name">Image Machine</string>
    <string name="machine_data_button_text">Machine Data</string>
    <string name="code_reader_button_text">Code Reader</string>
    <string name="title_text">Welcome to the Image Machine App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_code_reader">Code Reader</string>
    <string name="title_machine_data">Machine Data</string>
    <string name="machine_id_label">"Machine ID : "</string>
    <string name="machine_name_label">"Machine Name : "</string>
    <string name="machine_type_label">"Machine Type : "</string>
    <string name="machine_qrcode_label">"Machine QRCode : "</string>
    <string name="machine_lmt_label">"Last MT Date : "</string>
</resources>
