<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_mac_id_label"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            tools:text="@string/machine_id_label" />

        <TextView
            android:id="@+id/tv_mac_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/tv_mac_id_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            tools:text="machine_ID" />

        <TextView
            android:id="@+id/tv_mac_name_label"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_id_label"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            tools:text="@string/machine_name_label" />

        <TextView
            android:id="@+id/tv_mac_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_id"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/tv_mac_name_label"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            tools:text="machine_Name" />

        <TextView
            android:id="@+id/tv_mac_type_label"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_name_label"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            tools:text="@string/machine_type_label" />

        <TextView
            android:id="@+id/tv_mac_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_name"
            android:layout_marginLeft="6dp"

            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/tv_mac_type_label"
            android:textColor="@color/colorPrimaryDark"
            tools:text="machine_Type" />

        <TextView
            android:id="@+id/tv_mac_qrcode_label"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_type_label"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            tools:text="@string/machine_qrcode_label" />

        <TextView
            android:id="@+id/tv_mac_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_type"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/tv_mac_type_label"
            android:textColor="@color/colorPrimaryDark"
            tools:text="machine_QRCode" />

        <TextView
            android:id="@+id/tv_mac_lmtdate_label"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_qrcode_label"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            tools:text="@string/machine_lmt_label" />

        <TextView
            android:id="@+id/tv_mac_lmtdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mac_qrcode"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/tv_mac_qrcode_label"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            tools:text="machine_Last_MT_Date" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>